java 1.8 comparability :( - more